2013-02-26  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (class lmrob): Objects of class lmrob now store
	the robustness weights in $rweights (used to be in $weights).

	* R/lmrob.R (weights.lmrob): specialized weights() function for
	lmrob objects. Returns prior weights by default. Robustness weights
	are available via the "type" argument.

2013-02-14  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (lmrob): setting class "lmrob" also for unconverged
	initial estimates.

	* R/lmrob.R (print.summary.lmrob, print.lmrob, print.lmrob.S): improved
	handling of unconverged estimates and exact fits.

2013-02-07  Manuel Koller   <mkoller@ispm.unibe.ch>

	* R/lmrob.R (lmrob): compatibility to lm:
	'assign': labels of terms used for fitting.

	* R/lmrob.R (summary.lmrob): compatibility to summary.lm for:
	'df': degrees of freedom, a 3-vector (p, n-p, p*), the last being
	the number of non-aliased coefficients (used to be just (n-p)).
	'aliased': named logical vector showing if the original
	coefficients are aliased (was not returned before).

2012-05-14  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (.vcov.avar1): fix typo in "posdefify"

2012-03-05  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/lmrob.MM.R (.vcov.avar1): "posdefify" FIXME (negative eigen values)

2012-02-27  Martin Maechler  <maechler@stat.math.ethz.ch>

	* DESCRIPTION (Version): 0.8-1-1, released to CRAN on 2012-03-02

2012-02-24  Manuel Koller  <koller@stat.math.ethz.ch>

	* R/lmrob.R (lmrob): added init argument: string, function or list.
	* R/lmrob.MM.R (lmrob.fit): added init argument.

	* man/lmrob.Rd: Added documentation about init argument.
	* man/lmrob.fit.Rd: see above.

2012-02-22  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (print.summary.nlrob): use full call instead of just
	formula. --> shows non-default psi()

2012-02-19  Martin Maechler  <maechler@stat.math.ethz.ch>

	* R/nlrob.R (nlrob): now use nls(...., weights = *, ..), no longer