@@ -1,10 +1,12 @@
-## test handing of weights
+## test handing of weights and offset argument
 require(robustbase)
 
 ## generate simple example data
 data <- expand.grid(x1=letters[1:3], x2=LETTERS[1:4], rep=1:3)
+## generate offset column
+data$os <- 1:nrow(data)
 set.seed(1)
-data$y <- rnorm(nrow(data))
+data$y <- data$os + rnorm(nrow(data))
 ## add collinear variables
 data$x3 <- rnorm(nrow(data))
 data$x4 <- rnorm(nrow(data))
@@ -25,14 +27,14 @@ ctrl <- lmrob.control(psi="optimal", tuning.chi = 20, bb = 0.0003846154,
                       tuning.psi=20, method="SM", cov=".vcov.w")
 
 ## Classical models start with 'cm', robust just with  'rm' (or just 'm'):
-cm0 <- lm   (y ~ x1*x2 + x3 + x4 + x5, data)
-cm1 <- lm   (y ~ x1*x2 + x3 + x4 + x5, data, weights=weights)
-cm2 <- lm   (y ~ x1*x2 + x3 + x4 + x5, data2)
-rm0 <- lmrob(y ~ x1*x2 + x3 + x4 + x5, data                  , control=ctrl)
+(cm0 <- lm   (y ~ x1*x2 + x3 + x4 + x5 + offset(os), data))
+(cm1 <- lm   (y ~ x1*x2 + x3 + x4 + x5 + offset(os), data,  weights=weights))
+(cm2 <- lm   (y ~ x1*x2 + x3 + x4 + x5,              data2, offset=os))
+(rm0 <- lmrob(y ~ x1*x2 + x3 + x4 + x5 + offset(os), data,                   control=ctrl))
 set.seed(2)
-(rm1 <- lmrob(y ~ x1*x2 + x3 + x4 + x5, data, weights=weights , control=ctrl))
+(rm1 <- lmrob(y ~ x1*x2 + x3 + x4 + x5 + offset(os), data,  weights=weights, control=ctrl))
 set.seed(2)
-(rm2 <- lmrob(y ~ x1*x2 + x3 + x4 + x5, data2,                , control=ctrl))
+(rm2 <- lmrob(y ~ x1*x2 + x3 + x4 + x5,              data2, offset=os,       control=ctrl))
 
 sc0 <- summary(cm0)
 sc1 <- summary(cm1)
@@ -76,7 +78,6 @@ meths2 <- c(#"AIC",
             "dummy.coef",
             #"effects",
             #"extractAIC",
-            "fitted",
             #"hatvalues",
             #"influence",
             "kappa",
@@ -85,7 +86,6 @@ meths2 <- c(#"AIC",
             "nobs",
             "predict",
                                         #"proj",
-            "residuals",
                                         #"rstandard",
                                         #"rstudent",
                                         #"simulate",
@@ -103,6 +103,32 @@ for (meth in meths2)
 anova(rm1, update(rm1, ~ . - x4 - x5))
 anova(rm2, update(rm2, ~ . - x4 - x5))
 
+stopifnot(all.equal(fitted(cm0),          fitted(rm0)),
+          all.equal(fitted(cm1),          fitted(rm1)),
+          ## FIXME?: fitted(cm2) is of class AsIs but fitted(rm2) is numeric
+          all.equal(unclass(fitted(cm2)), fitted(rm2)))
+
+nd <- expand.grid(x1=letters[1:3], x2=LETTERS[1:4])
+set.seed(3)
+nd$x3 <- rnorm(nrow(nd))
+nd$x4 <- rnorm(nrow(nd))
+nd$x5 <- rnorm(nrow(nd))
+nd$os <- nrow(nd):1
+wts   <- runif(nrow(nd))
+stopifnot(all.equal(predict(cm0, nd, interval="prediction"),
+                    predict(rm0, nd, interval="prediction")),
+          all.equal(predict(cm1, nd, interval="prediction"),
+                    predict(rm1, nd, interval="prediction")),
+          all.equal(predict(cm2, nd, interval="prediction"),
+                    predict(rm2, nd, interval="prediction")),
+          all.equal(predict(cm0, nd, interval="prediction", weights=wts),
+                    predict(rm0, nd, interval="prediction", weights=wts)),
+          all.equal(predict(cm1, nd, interval="prediction", weights=wts),
+                    predict(rm1, nd, interval="prediction", weights=wts)),
+          all.equal(predict(cm2, nd, interval="prediction", weights=wts),
+                    predict(rm2, nd, interval="prediction", weights=wts),
+                    tolerance=1e-7))
+
 ## Padding can lead to differing values here
 ## so test only full rank part
 qrEQ <- function(m1, m2) {
@@ -118,11 +144,16 @@ qrEQ(cm0, rm0)
 qrEQ(cm1, rm1)
 qrEQ(cm2, rm2)
 
-stopifnot(all.equal(resid(cm0, type="pearson"), resid(rm0, type="pearson")),
-          all.equal(resid(cm1, type="pearson"), resid(rm1, type="pearson")),
-          all.equal(resid(cm2, type="pearson"), resid(rm2, type="pearson")))
+stopifnot(all.equal(residuals(cm0),                      residuals(rm0)),
+          all.equal(residuals(cm1),                      residuals(rm1)),
+          ## FIXME?: residuals(cm2) is of class AsIs but residuals(rm2) is numeric
+          all.equal(unclass(residuals(cm2)),             residuals(rm2)),
+          all.equal(resid(cm0, type="pearson"),          resid(rm0, type="pearson")),
+          all.equal(resid(cm1, type="pearson"),          resid(rm1, type="pearson")),
+          all.equal(unclass(resid(cm2, type="pearson")), resid(rm2, type="pearson")))
 
 stopifnot(all.equal(vcov(cm0), vcov(rm0), check.attr=FALSE),
           all.equal(vcov(cm1), vcov(rm1), check.attr=FALSE),
           all.equal(vcov(cm2), vcov(rm2), check.attr=FALSE))
 
+## FIXME: test null fit
